# luizalabs-interview

./: .ruff.toml  LICENSE.md  Makefile  README.md  conftest.py  local.yml  pyproject.toml  pytest.ini
.envs/: .local
.github/workflows/: ci.yml
config/config/: settings.py
docker/local/django/: Dockerfile  entrypoint.sh  start.sh
docker/local/nginx/: Dockerfile  default.conf
requirements/: local.txt
src/: conftest.py  pytest.ini  setup.cfg
src/config/: urls.py
src/config/settings/: base.py  local.py
src/v1/customers/: apps.py  models.py  serializers.py  urls.py  views.py
src/v1/customers/migrations/: 0001_initial.py
src/v1/customers/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
src/v1/favorites/: apps.py  models.py  serializers.py  urls.py  views.py
src/v1/favorites/migrations/: 0001_initial.py  0002_alter_favorite_user_and_more.py  0003_alter_product_link.py
src/v1/favorites/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
src/v1/users/: managers.py  models.py  serializers.py  urls.py  views.py
src/v1/users/migrations/: 0001_initial.py
src/v1/users/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
